--- a/font.css
+++ b/font.css
@@ -1,23 +1,23 @@
 @font-face {
   font-family: 'AltCarbBrasil';
-  src: url('/Fontes/AltCarbBrasil/AltCarbBrasil.eot');
-  src: url('/Fontes/AltCarbBrasil/AltCarbBrasil.woff2') format('woff2'),
-       url('/Fontes/AltCarbBrasil/AltCarbBrasil.woff') format('woff'),
-       url('/Fontes/AltCarbBrasil/AltCarbBrasil.ttf') format('truetype'),
-       url('/Fontes/AltCarbBrasil/AltCarbBrasil.svg#AltCarbBrasil') format('svg'),
-       url('/Fontes/AltCarbBrasil/AltCarbBrasil.eot?#iefix') format('embedded-opentype');
+  src: url('/Fontes/AltCarbBrasil.eot');
+  src: url('/Fontes/AltCarbBrasil.woff2') format('woff2'),
+       url('/Fontes/AltCarbBrasil.woff') format('woff'),
+       url('/Fontes/AltCarbBrasil.ttf') format('truetype'),
+       url('/Fontes/AltCarbBrasil.svg#AltCarbBrasil') format('svg'),
+       url('/Fontes/AltCarbBrasil.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Linotext';
-  src: url('/Fontes/Linotext/Linotext.eot');
-  src: url('/Fontes/Linotext/Linotext.woff2') format('woff2'),
-       url('/Fontes/Linotext/Linotext.woff') format('woff'),
-       url('/Fontes/Linotext/Linotext.ttf') format('truetype'),
-       url('/Fontes/Linotext/Linotext.svg#Linotext') format('svg'),
-       url('/Fontes/Linotext/Linotext.eot?#iefix') format('embedded-opentype');
+  src: url('/Fontes/Linotext.eot');
+  src: url('/Fontes/Linotext.woff2') format('woff2'),
+       url('/Fontes/Linotext.woff') format('woff'),
+       url('/Fontes/Linotext.ttf') format('truetype'),
+       url('/Fontes/Linotext.svg#Linotext') format('svg'),
+       url('/Fontes/Linotext.eot?#iefix') format('embedded-opentype');
   font-weight: normal;
   font-style: normal;
 }
