--- a/font.css
+++ b/font.css
@@ -21,4 +21,16 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'EthnocentricW00-ExtraLight';
+  src: url('/Fontes/EthnocentricW00-ExtraLight.eot');
+  src: url('/Fontes/EthnocentricW00-ExtraLight.woff2') format('woff2'),
+       url('/Fontes/EthnocentricW00-ExtraLight.woff') format('woff'),
+       url('/Fontes/EthnocentricW00-ExtraLight.ttf') format('truetype'),
+       url('/Fontes/EthnocentricW00-ExtraLight.svg#EthnocentricW00-ExtraLight') format('svg'),
+       url('/Fontes/EthnocentricW00-ExtraLight.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
