--- a/font.css
+++ b/font.css
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-  font-family: 'Linotext';
+  font-family: 'Lino-text';
   src: url('/Fontes/Linotext.eot');
   src: url('/Fontes/Linotext.woff2') format('woff2'),
        url('/Fontes/Linotext.woff') format('woff'),
