--- a/font.css
+++ b/font.css
@@ -21,6 +21,32 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Alino';
+  src: url('/Fontes/Alino.eot');
+  src: url('/Fontes/Alino.woff2') format('woff2'),
+       url('/Fontes/Alino.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Alino';
+  src: url('/Fontes/Linotext.woff') format('woff'),
+       url('/Fontes/Linotext.ttf') format('truetype'),
+       url('/Fontes/Linotext.svg#Linotext') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'wild';
+  src: url('/Fontes/Wild.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 @font-face {
   font-family: 'EthnocentricW00-ExtraLight';
   src: url('/Fontes/EthnocentricW00-ExtraLight.eot');
